added user_interactions endpoints
